Make Java options for sbt.bat the same as sbt script